--- a/client/src/App.css
+++ b/client/src/App.css
@@ -332,6 +332,7 @@ footer {
     flex-direction: row;
     gap: 1.2rem;
     color: #000;
+    width: fit-content;
 }
 
 .user-field {
@@ -391,6 +392,7 @@ footer {
     background: #f7f7f7;
     border-radius: 18px;
     box-shadow: 0 4px 24px rgba(0,0,0,0.07);
+    color: #000;
 }
 
 .manage-users-title {
@@ -410,7 +412,7 @@ footer {
 
 .side {
     display: flex;
-    justify-content: space-around;
+    justify-content:first baseline;
 }
 
 /* StatusMessage.css */
