--- a/client/src/App.css
+++ b/client/src/App.css
@@ -366,7 +366,8 @@ footer {
 }
 
 .edit-btn,
-.delete-btn {
+.delete-btn,
+.add-btn {
     padding: 0.5rem 1.2rem;
     border: none;
     border-radius: 8px;
@@ -385,19 +386,24 @@ footer {
     color: #fff;
 }
 
+.add-btn {
+    background: #4deb94;
+    color: #fff;
+}
+
 /* ManageUsers.css */
 .manage-users-container {
-    max-width: 900px;
     margin: 1rem;
     padding: 2rem;
     background: #f7f7f7;
     border-radius: 18px;
     box-shadow: 0 4px 24px rgba(0,0,0,0.07);
     color: #000;
+    width: fit-content;
 }
 
 .manage-users-title {
-    font-size: 1.7rem;
+    font-size: 1.5rem;
     font-weight: 700;
     margin-bottom: 2rem;
     color: #222;
