remove update feature of user roles

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -534,6 +534,12 @@ footer {
     }
 }
 
+.capitalize {
+    text-transform: capitalize;
+    font-weight: bold;
+    padding: 5px;
+}
+
 /* Sidebar.css */
 
 .sidebar-header {
